packages/components/src/styles/Alert.module.css
/* Temporary color aliases for Alerts. This block should be removed when the new color system is implemented. */
:root,
[data-theme='default'] {
	--alert-color-border-neutral: var(--lp-color-gray-200);
	--alert-color-bg-neutral: var(--lp-color-gray-0);
	--alert-color-border-error: var(--lp-color-red-200);
	--alert-color-bg-error: var(--lp-color-red-0);
	--alert-color-border-info: var(--lp-color-blue-200);
	--alert-color-bg-info: var(--lp-color-blue-0);
	--alert-color-border-success: var(--lp-color-green-200);
	--alert-color-bg-success: var(--lp-color-green-0);
	--alert-color-border-warning: #fad88f;
	--alert-color-bg-warning: #fdfae4;
}
[data-theme='dark'] {
	--alert-color-border-neutral: var(--lp-color-gray-800);
	--alert-color-bg-neutral: var(--lp-color-gray-900);
	--alert-color-border-error: var(--lp-color-red-700);
	--alert-color-bg-error: #391620;
	--alert-color-border-info: var(--lp-color-blue-700);
	--alert-color-bg-info: #192142;
	--alert-color-border-success: var(--lp-color-green-700);
	--alert-color-bg-success: #14260d;
	--alert-color-border-warning: #932c00;
	--alert-color-bg-warning: #3c170c;
}

.base {
	display: flex;
	border-radius: var(--lp-border-radius-medium);
	gap: var(--lp-spacing-300);
	align-items: flex-start;

	&.error .icon {
		fill: var(--lp-color-fill-feedback-error);
	}

	&.info .icon {
		fill: var(--lp-color-fill-feedback-info);
	}

	&.success .icon {
		fill: var(--lp-color-fill-feedback-success);
	}

	&.warning .icon {
		fill: #e65d00;
	}
}

.default,
.inline {
	padding: var(--lp-spacing-500);
	background-color: var(--alert-color-bg-neutral);
	border: 1px solid var(--alert-color-border-neutral);
	position: relative;
	min-height: var(--lp-size-48);

	&.error {
		border-color: var(--alert-color-border-error);
		background-color: var(--alert-color-bg-error);
	}

	&.info {
		border-color: var(--alert-color-border-info);
		background-color: var(--alert-color-bg-info);
	}

	&.success {
		border-color: var(--alert-color-border-success);
		background-color: var(--alert-color-bg-success);
	}

	&.warning {
		border-color: var(--alert-color-border-warning);
		background-color: var(--alert-color-bg-warning);
	}

	&:has(.heading) {
		/* biome-ignore lint/style/noDescendingSpecificity: ignore */
		& .icon {
			transform: translateY(var(--lp-size-2));
		}
	}

	/* Let's keep the close button in the default position, but position relative in case we want to move it later. */
	& .close {
		position: relative;
	}
}

.inline {
	align-items: center;
	gap: var(--lp-spacing-300);
	padding: var(--lp-spacing-400) var(--lp-spacing-500);

	& .close {
		margin-left: var(--lp-spacing-300);
	}

	& .content {
		flex-direction: row;
		align-items: center;
		gap: var(--lp-spacing-400);
	}

	/* Adjust padding so the alert maintains the same height if there's an inline action or close button. We have to hardcode the vertical values because of the way borders get calculated as a part of an element's dimensions. */
	&:has(.inlineAction),
	&:has(.close) {
		padding: 7px var(--lp-spacing-300) 7px var(--lp-spacing-500);
	}

	&:has(.inlineAction) {
		.close {
			margin-left: 0;
		}
	}
}

.inlineAction {
	flex-shrink: 0;
	margin-left: auto;
}

.content {
	min-width: 0;
	flex: 1;
	display: flex;
	flex-direction: column;
	font: var(--lp-text-body-2-regular);
	align-items: flex-start;
}

.content .heading {
	font: var(--lp-text-body-2-semibold);
}

.buttonGroup {
	margin-top: var(--lp-spacing-500);
}

.default .close {
	bottom: var(--lp-spacing-300);
	left: var(--lp-spacing-300);
}

/* Sometimes we want to make text bold, but we need to make sure this maps to the correct font weight. */
.content strong,
.content b {
	font-weight: var(--lp-font-weight-semibold);
}

